--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
       <h1>REGISTRARME</h1>
       <div class="registration">
         <p> Completa el siguiente formulario para poder participar. </p>
-        <form action="{{url_for('/web/contact')}}" method="POST">
+        <form action="{{url_for('register')}}" method="POST">
           <table cellspacing="0" cellpadding="0">
             <tbody>
               <tr>
